--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <div class="logo">
           <span>Bianca Fernandes</span>
         </div>
-        <li><a href="#produtos-digitais">Produtos</a></li>
         <li><a href="#depoimentos">Depoimentos</a></li>
+        <li><a href="#produtos-digitais">Produtos</a></li>
         <li><a href="#faq">FAQ</a></li>
       </ul>
     </nav>
@@ -28,15 +28,19 @@
 
   <section class="hero">
     <div class="text">
-      <h2>Nutri Bianca Fernandes</h2>
-      <h1>Emagreça regulando seus hormônios de forma natural.</h1>
+      <h1>Seu corpo te sabota por dentro?</h1>
+      <p>Se você luta com ganho de peso, ciclo desregulado, cólicas fortes ou dificuldade para engravidar, é porque seus hormônios estão descontrolados, e <strong>dieta sozinha não resolve.</strong></p>
       <ul>
-        <li>SOP</li>
-        <li>Endometriose</li>
-        <li>Emagrecimento</li>
-        <li>Fertilidade</li>
+        <li>Emagreça sem passar fome</li>
+        <li>Regule o seu ciclo menstrual</li>
+        <li>Melhore sua fertilidade sem o uso de medicamentos</li>
+        <li>Reduza a acne</li>
+        <li>Pare de perder cabelo</li>
       </ul>
-      <a href="https://api.whatsapp.com/send/?phone=5511964988305&text&type=phone_number&text=Oi, Bianca! Vim pelo seu site e gostaria de saber mais sobre como funciona o seu acompanhamento.&app_absent=0" class="btn" target="_blank">Agende sua consulta</a>
+      <a href="https://api.whatsapp.com/send/?phone=5511964988305&text&type=phone_number&text=Oi, Bianca! Vim pelo seu site e gostaria de saber mais sobre como funciona o seu acompanhamento.&app_absent=0" class="btn" target="_blank">
+        <img src="img/whatsapp.png" alt="Ícone do WhatsApp">
+        Fale com a nutri no WhatsApp!
+      </a>
     </div>
     <div class="image">
       <img src="img/sem_fundo.png" alt="Nutricionista Bianca Fernandes">
@@ -48,28 +52,36 @@
     <h2>Minhas Especialidades</h2>
     <div class="grid">
       <div class="card">
-        <h3>Saúde da mulher</h3>
-        <p>Cuidado integral para equilíbrio hormonal, bem-estar físico e emocional em todas as fases da vida.</p>
-      </div>
-      <br>
-      <div class="card">
         <h3>Emagrecimento</h3>
-        <p>Emagreça com saúde, respeitando seu corpo, sua rotina e suas reais necessidades.</p>
+        <p class="sub-title">👉 Já tentou de tudo e não consegue emagrecer de forma duradoura?</p>
+        <p>Chega de dietas restritivas e efeito sanfona: você vai emagrecer tratando a verdadeira causa do ganho de peso — seus hormônios desregulados.</p>
       </div>
       <br>
       <div class="card">
-        <h3>SOP</h3>
-        <p>Tratamento personalizado para reduzir sintomas e melhorar sua qualidade de vida de forma natural.</p>
+        <h3>SOP (Síndrome dos Ovários Poliscísticos)</h3>
+        <p class="sub-title">👉 Cansada de acne, queda de cabelo e ciclos desregulados?</p>
+        <p>Um plano natural e funcional que atua direto no descontrole hormonal, reduzindo os sintomas da SOP sem depender de medicamentos.</p>
       </div>
       <br>
       <div class="card">
         <h3>Endometriose</h3>
-        <p>Alívio dos sintomas e melhora da disposição por meio da nutrição anti-inflamatória e funcional.</p>
+        <p class="sub-title">👉 Sofre com dores, cólicas intensas e cansaço constante?</p>
+        <p>Nutrição anti-inflamatória focada em diminuir a dor, melhorar a disposição e recuperar sua qualidade de vida dia após dia.</p>
       </div>
       <br>
       <div class="card">
         <h3>Fertilidade</h3>
-        <p>Preparação do corpo para a gestação de maneira saudável e natural, fortalecendo o equilíbrio hormonal.</p>
+        <p class="sub-title">👉 Quer engravidar com saúde, sem hormônios artificiais?</p>
+        <p>Um acompanhamento completo que respeita seu corpo, seu momento e suas reais necessidades — da primeira menstruação à menopausa.</p>
+      </div>
+    </div>
+    <div class="cta">
+      <p class="cta-text">Pronta para destravar sua saúde hormonal?</p>
+      <div class="btn-container">
+        <a href="https://api.whatsapp.com/send/?phone=5511964988305&text&type=phone_number&text=Oi, Bianca! Vim pelo seu site e gostaria de saber mais sobre como funciona o seu acompanhamento.&app_absent=0" class="btn" target="_blank">
+          <img src="img/whatsapp.png" alt="Ícone do WhatsApp">
+          Fale com a nutri no WhatsApp!
+        </a>
       </div>
     </div>
   </section>
@@ -77,41 +89,18 @@
   <section id="sobre" class="sobre">
     <div class="texto">
       <h3 class="cursive-name">Bianca Fernandes</h3>
-      <h2>Nutricionista</h2>
-      <p>Oi, sou a Bianca Fernandes! 👋</p> <br>
-      <p>Nutricionista apaixonada por saúde da mulher, com foco em emagrecimento, equilíbrio hormonal, SOP, endometriose e fertilidade.</p> <br>
-      <p>Acredito em um estilo de vida leve, natural e possível — e já ajudei mais de 600 mulheres na busca pela sua melhor versão.</p> <br>
-      <p>Seja bem-vinda! 🌿</p>
+      <p class="sub-title">Quem cuida da sua saúde hormonal precisa entender mais do que dieta. Precisa entender VOCÊ.</p>
+      <br>
+      <p>Eu sou Bianca Fernandes, nutricionista especialista em saúde hormonal da mulher. Nos últimos anos, ajudei <strong>mais de 600 mulheres reais</strong> a recuperar sua autoestima e saúde hormonal de forma 100% natural, emagrecer sem sofrimento, aliviar os sintomas da SOP e endometriose e até realizar o sonho da gravidez — tudo sem depender de hormônios artificiais ou dietas impossíveis.</p> <br>
+      <div class="btn-container">
+        <a href="https://api.whatsapp.com/send/?phone=5511964988305&text&type=phone_number&text=Oi, Bianca! Vim pelo seu site e gostaria de saber mais sobre como funciona o seu acompanhamento.&app_absent=0" class="btn" target="_blank">
+          <img src="img/whatsapp.png" alt="Ícone do WhatsApp">
+          Fale com a nutri no WhatsApp!
+        </a>
+      </div>
     </div>
     <div class="imagem">
       <img src="img/IMG_6457.JPG" alt="Nutri Bianca Fernandes">
-    </div>
-  </section>
-
-  <section class="produtos-digitais" id="produtos-digitais">
-    <h2>Produtos Digitais</h2>
-    <p>Transforme sua saúde com conteúdos exclusivos criados para ajudar você no seu ritmo, de onde estiver.</p>
-    <div class="produtos">
-      <div class="produto-card">
-        <img src="img/produtos/cardapio-para-mulheres.png" alt="Cardápio para Mulheres">
-        <h3>Cardápio para Mulheres</h3>
-        <p>Desenvolvido para mulheres que desejam regular seu ciclo, longe de medicamentos.</p>
-        <a href="https://pay.kiwify.com.br/DuDBGCb" class="btn-comprar">Quero adquirir!</a>
-      </div>
-
-      <div class="produto-card">
-        <img src="img/produtos/ciclo-sementes.png" alt="Receitas Hormonais">
-        <h3>Ciclo das sementes</h3>
-        <p>Conheça o poder que as sementes tem, para regular seu ciclo hormonal 🌱.</p>
-        <a href="https://pay.kiwify.com.br/V9oABee" class="btn-comprar">Quero adquirir!</a>
-      </div>
-
-      <div class="produto-card">
-        <img src="img/produtos/guia-cha.png" alt="Desafio Emagrecimento">
-        <h3>Guia de chás</h3>
-        <p>Aprenda a forma correta de preparo e uma lista com várias opções de chás.</p>
-        <a href="https://pay.kiwify.com.br/HHLAFKd" class="btn-comprar">Quero adquirir!</a>
-      </div>
     </div>
   </section>
 
@@ -143,33 +132,82 @@
     </div>
   </section>
 
+  <section class="produtos-digitais" id="produtos-digitais">
+    <h2>Produtos Digitais</h2>
+    <p>Transforme sua saúde com conteúdos exclusivos criados para ajudar você no seu ritmo, de onde estiver.</p>
+    <div class="produtos">
+      <div class="produto-card">
+        <img src="img/produtos/cardapio-para-mulheres.png" alt="Cardápio para Mulheres">
+        <h3>Cardápio para Mulheres</h3>
+        <p>👉 Para quem quer regular o ciclo menstrual, desinchar e emagrecer sem precisar abrir mão do prazer de comer.</p>
+        <a href="https://pay.kiwify.com.br/DuDBGCb" class="btn-comprar">Quero começar minha transformação!</a>
+      </div>
+
+      <div class="produto-card">
+        <img src="img/produtos/ciclo-sementes.png" alt="Receitas Hormonais">
+        <h3>Ciclo das sementes</h3>
+        <p>👉 Para quem sofre com ciclos irregulares, acne hormonal, TPM forte ou dificuldade para engravidar.</p>
+        <a href="https://pay.kiwify.com.br/V9oABee" class="btn-comprar">Quero regular meu ciclo naturalmente!</a>
+      </div>
+
+      <div class="produto-card">
+        <img src="img/produtos/guia-cha.png" alt="Desafio Emagrecimento">
+        <h3>Guia de chás</h3>
+        <p>👉 Para quem quer acelerar o emagrecimento, desinflamar o corpo e melhorar o funcionamento do intestino e do metabolismo.</p>
+        <a href="https://pay.kiwify.com.br/HHLAFKd" class="btn-comprar">Quero acelerar meu emagrecimento!</a>
+      </div>
+    </div>
+    <p class="cta-text">Alguma dúvida? Me envie uma mensagem.</p>
+    <div class="btn-container">
+      <a href="https://api.whatsapp.com/send/?phone=5511964988305&text&type=phone_number&text=Oi, Bianca! Vim pelo seu site e gostaria de saber mais sobre como funciona o seu acompanhamento.&app_absent=0" class="btn" target="_blank">
+        <img src="img/whatsapp.png" alt="Ícone do WhatsApp">
+        Fale comigo!
+      </a>
+    </div>
+  </section>
+
   <section class="faq" id="faq">
     <h2>Perguntas Frequentes</h2>
     <div class="faq-item">
       <button class="faq-question">Atende apenas mulheres?</button>
       <div class="faq-answer">
-        <p>Sim, meu atendimento é especializado na saúde da mulher, com foco em emagrecimento, equilíbrio hormonal, SOP, endometriose e fertilidade.</p>
+        <p>Sim. Minha especialidade é exclusiva na saúde hormonal da mulher — seja para emagrecimento, SOP, endometriose ou fertilidade. Isso garante foco total nas necessidades femininas, sem protocolos genéricos.</p>
       </div>
     </div>
 
     <div class="faq-item">
       <button class="faq-question">As consultas são online ou presenciais?</button>
       <div class="faq-answer">
-        <p>Atendo de forma online, oferecendo praticidade e comodidade para pacientes de qualquer lugar. <br> Além disso, atendo de forma presencial no seguinte endereço: Rua 6, 221 - Centro, Rio Claro - SP 13500-050.</p>
+        <p>Atendo de forma online, para que você possa fazer o tratamento sem sair de casa — com o mesmo nível de personalização e acompanhamento de um consultório físico.</p>
+        <p>Atendo também de forma presencial no seguinte endereço: Rua 6, 221 - Centro, Rio Claro - SP 13500-050.</p>
       </div>
     </div>
 
     <div class="faq-item">
       <button class="faq-question">Preciso de exames antes da consulta?</button>
       <div class="faq-answer">
-        <p>Os exames não são obrigatórios na primeira consulta, mas se você já tiver exames recentes, é interessante trazê-los para uma análise mais completa.</p>
+        <p>Não obrigatoriamente. Na primeira consulta avalio seu histórico, sintomas e rotina. Se necessário, solicito exames específicos para personalizar ainda mais seu plano alimentar e hormonal.</p>
       </div>
     </div>
 
     <div class="faq-item">
-      <button class="faq-question">Em quanto tempo posso ver resultados?</button>
+      <button class="faq-question">Em quanto tempo vou ver resultados?</button>
       <div class="faq-answer">
-        <p>O tempo de resultado varia de acordo com cada organismo, objetivo e dedicação ao plano alimentar. Geralmente, as primeiras mudanças são percebidas nas primeiras semanas.</p>
+        <p>As primeiras mudanças são percebidas <strong>logo nas primeiras semanas</strong>, mas o tempo pode variar de acordo com cada organismo, objetivo e dedicação ao plano alimentar.</p>
+      </div>
+    </div>
+
+    <div class="faq-item">
+      <button class="faq-question">Seu método inclui remédios ou hormônios artificiais?</button>
+      <div class="faq-answer">
+        <p>Não. Meu foco é reequilibrar seus hormônios de forma natural — através da alimentação funcional, suplementação se necessário e mudanças sustentáveis de rotina. Tudo sem depender de anticoncepcionais ou tratamentos agressivos.</p>
+      </div>
+    </div>
+
+    <div class="faq-item">
+      <button class="faq-question">Posso emagrecer mesmo sem fazer academia?</button>
+      <div class="faq-answer">
+        <p>Sim. O foco é tratar o descontrole hormonal que impede seu corpo de emagrecer, independentemente de atividade física intensa. Caso queira, posso orientar exercícios leves e fáceis de encaixar na sua rotina.</p>
       </div>
     </div>
   </section>
@@ -188,6 +226,12 @@
     </div>
     <p>📍 Atendimento online para todo o Brasil</p>
   </section>
+
+  <div class="fixed-wpp">
+    <a href="https://api.whatsapp.com/send/?phone=5511964988305&text&type=phone_number&text=Oi, Bianca! Vim pelo seu site e gostaria de saber mais sobre como funciona o seu acompanhamento.&app_absent=0" target="_blank">
+      <img src="img/whatsapp-icon.png" alt="Ícone do Whatsapp">
+    </a>
+  </div>
 
   <footer>
     <p>&copy; 2025 Bianca Fernandes. Todos os direitos reservados.</p>
