Seção de Método

--- a/index.html
+++ b/index.html
@@ -10,26 +10,32 @@
   <script src="carousel.js"></script>
 </head>
 <body>
+  <div class="banner-consulta-particular">
+    <span>CONSULTA SOMENTE PARTICULAR</span>
+  </div>
   <header id="nav-bar">
     <nav>
       <ul>
         <li><a href="#">Início</a></li>
         <li><a href="#especialidades">Especialidades</a></li>
         <li><a href="#sobre">Sobre mim</a></li>
+        <li><a href="#metodo">Método</a></li>
         <div class="logo">
           <span>Bianca Fernandes</span>
         </div>
         <li><a href="#depoimentos">Depoimentos</a></li>
         <li><a href="#produtos-digitais">Produtos</a></li>
         <li><a href="#faq">FAQ</a></li>
+        <li><a href="#contato">Contato</a></li>
       </ul>
     </nav>
   </header>
 
   <section class="hero">
     <div class="text">
-      <h1>Seu corpo te sabota por dentro?</h1>
-      <p>Se você luta com ganho de peso, ciclo desregulado, cólicas fortes ou dificuldade para engravidar, é porque seus hormônios estão descontrolados, e <strong>dieta sozinha não resolve.</strong></p>
+      <h1>Emagreça enquanto acaba com os sintomas da SOP, sem medicamentos.</h1>
+      <!-- <p>Se você luta com ganho de peso, ciclo desregulado, cólicas fortes ou dificuldade para engravidar, é porque seus hormônios estão descontrolados, e <strong>dieta sozinha não resolve.</strong></p> -->
+      <p>Você também pode regular seu ciclo, desinchar e perder os primeiros quilos sem remédios — <strong>mais de 600 mulheres reais</strong> já fizeram isso comigo.</p>
       <ul>
         <li>Emagreça sem passar fome</li>
         <li>Regule o seu ciclo menstrual</li>
@@ -37,10 +43,12 @@
         <li>Reduza a acne</li>
         <li>Pare de perder cabelo</li>
       </ul>
-      <a href="https://api.whatsapp.com/send/?phone=5511964988305&text&type=phone_number&text=Oi, Bianca! Vim pelo seu site e gostaria de saber mais sobre como funciona o seu acompanhamento.&app_absent=0" class="btn" target="_blank">
-        <img src="img/whatsapp.png" alt="Ícone do WhatsApp">
-        Fale com a nutri no WhatsApp!
-      </a>
+      <div class="btn-container">
+        <a href="https://api.whatsapp.com/send/?phone=5511964988305&text&type=phone_number&text=Oi, Bianca! Vim pelo seu site e gostaria de saber mais sobre como funciona o seu acompanhamento.&app_absent=0" class="btn" target="_blank">
+          <img src="img/whatsapp.png" alt="Ícone do WhatsApp">
+          Quero destravar minha saúde hormonal!
+        </a>
+      </div>
     </div>
     <div class="image">
       <img src="img/sem_fundo.png" alt="Nutricionista Bianca Fernandes">
@@ -80,7 +88,7 @@
       <div class="btn-container">
         <a href="https://api.whatsapp.com/send/?phone=5511964988305&text&type=phone_number&text=Oi, Bianca! Vim pelo seu site e gostaria de saber mais sobre como funciona o seu acompanhamento.&app_absent=0" class="btn" target="_blank">
           <img src="img/whatsapp.png" alt="Ícone do WhatsApp">
-          Fale com a nutri no WhatsApp!
+          Quero ser saudável!
         </a>
       </div>
     </div>
@@ -89,13 +97,15 @@
   <section id="sobre" class="sobre">
     <div class="texto">
       <h3 class="cursive-name">Bianca Fernandes</h3>
-      <p class="sub-title">Quem cuida da sua saúde hormonal precisa entender mais do que dieta. Precisa entender VOCÊ.</p>
+      <!-- <p class="sub-title">Quem cuida da sua saúde hormonal precisa entender mais do que dieta. Precisa entender VOCÊ.</p> -->
+      <p class="sub-title">Eu sei o quanto é frustrante tentar de tudo — dietas, pílulas, chás — e ver seu corpo não responder.</p>
       <br>
-      <p>Eu sou Bianca Fernandes, nutricionista especialista em saúde hormonal da mulher. Nos últimos anos, ajudei <strong>mais de 600 mulheres reais</strong> a recuperar sua autoestima e saúde hormonal de forma 100% natural, emagrecer sem sofrimento, aliviar os sintomas da SOP e endometriose e até realizar o sonho da gravidez — tudo sem depender de hormônios artificiais ou dietas impossíveis.</p> <br>
+      <p>Foi por isso que me tornei especialista em saúde hormonal feminina: para ajudar mulheres reais (como você) a sair desse ciclo, de forma natural, sem remédios ou sofrimento.</p>
+      <p><strong>Mais de 600 mulheres</strong> já deram esse primeiro passo comigo — e viram o corpo finalmente responder.</p> <br>
       <div class="btn-container">
         <a href="https://api.whatsapp.com/send/?phone=5511964988305&text&type=phone_number&text=Oi, Bianca! Vim pelo seu site e gostaria de saber mais sobre como funciona o seu acompanhamento.&app_absent=0" class="btn" target="_blank">
           <img src="img/whatsapp.png" alt="Ícone do WhatsApp">
-          Fale com a nutri no WhatsApp!
+          Quero virar a chave!
         </a>
       </div>
     </div>
@@ -103,6 +113,29 @@
       <img src="img/IMG_6457.JPG" alt="Nutri Bianca Fernandes">
     </div>
   </section>
+
+  <section class="metodo" id="metodo">
+    <h2>Como funciona o Método Bianca Fernandes™?</h2>
+    <p>Regule seus hormônios <strong>sem remédios, sem sofrimento e sem academia obrigatória.</strong></p>
+    
+    <div class="metodos">
+      <div class="metodo-container">
+        <div class="metodo-numero">✅</div>
+        <h3 class="metodo-titulo">Seu metabolismo funcionando de verdade</h3>
+      </div>
+
+      <div class="metodo-container">
+        <div class="metodo-numero">✅</div>
+        <h3 class="metodo-titulo">Rotina fácil de seguir, com app e planner</h3>
+      </div>
+
+      <div class="metodo-container">
+        <div class="metodo-numero">✅</div>
+        <h3 class="metodo-titulo">Acompanhamento e ajustes constantes — para seu corpo responder de vez.</h3>
+      </div>
+    </div>
+  </section>
+
 
   <section class="depoimentos" id="depoimentos">
     <h2>O que minhas pacientes dizem</h2>
@@ -235,6 +268,7 @@
 
   <footer>
     <p>&copy; 2025 Bianca Fernandes. Todos os direitos reservados.</p>
+    <span><a href="https://api.whatsapp.com/send/?phone=5519996666645&text&type=phone_number&text=Oi, Bruno! Vim pelo site da Nutri Bianca Fernandes e gostaria de acelerar meu negócio digital!.&app_absent=0" target="_blank">Desenvolvido por Bruno Risso</a></span>
   </footer>
 </body>
 <script src="faq.js"></script>
